# brute-force-demo

.devcontainer/: devcontainer.json
CSI3480-SummerProject-main/: README.md  README_DEPLOYMENT.md  app.py  app_full.py  pyproject.toml  replit.nix  replit_main.py  requirements.txt
CSI3480-SummerProject-main/secret_user_info/: secret_password.txt
CSI3480-SummerProject-main/small-password-list/: smallpasswordlist.txt
CSI3480-SummerProject-main/src/: app.py  main.py
