[tool.poetry]
name = "brute-force-demo"
version = "0.1.0"
description = "Educational brute force attack simulator"
authors = ["Andrae Taylor", "Christina Carvalho", "Alexander Sekulski"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
